Modified image to Raspberry Pi

--- a/index.html
+++ b/index.html
@@ -201,12 +201,13 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://www.gannett-cdn.com/media/USATODAY/USATODAY/2013/06/13/1371157674000-Rasp-Pi-IMG-7830-Model-B-1306131709_x-large.jpg">
         </div>
         <div class="span5 copy">
           <p>
             I'm going to create a karaoke software on raspberry pi, for entertainment 
-			and just for heck of it. Recently I just purhcased a raspberry pie, I'm very new to raspberry pie, and it is
+			and just for heck of it. Recently I just purhcased a raspberry pie, I'm very excited to do this 
+			project on raspberry pie, and it is
 			going to be the next big thing. 
           </p>
         </div>
